dynC_API/x86_64-unknown-linux2.4/dynC.output
Terminals which are not used

   KNOWN_ERROR_TOK
   CONSTANT
   EOL
   SIZEOF
   PTR_OP
   LEFT_OP
   RIGHT_OP
   LEFT_ASSIGN
   RIGHT_ASSIGN
   AND_ASSIGN
   XOR_ASSIGN
   OR_ASSIGN
   TYPE_NAME
   TYPEDEF
   EXTERN
   STATIC
   CHAR
   SHORT
   INT
   LONG
   SIGNED
   UNSIGNED
   FLOAT
   DOUBLE
   CONST
   VOID
   STRUCT
   UNION
   ENUM
   ELLIPSIS
   INST
   NEWLINE
   CASE
   DEFAULT
   SWITCH
   RETURN
   AMPERSAND
   ASTERISK
   DOT
   NOT
   COLON
   END_BLOCK
   START_BLOCK
   DOLLAR
   '!'
   '~'
   OR_OP
   AND_OP
   LOWER_THAN_DEREF


Grammar

    0 $accept: start $end

    1 start: statement_list

    2 var_declaration: var_decl_modifiers IDENTIFIER
    3                | var_decl_modifiers IDENTIFIER ASSIGN arith_expression
    4                | var_decl_modifiers IDENTIFIER '[' NUMBER ']'
    5                | var_decl_modifiers IDENTIFIER '[' ']' ASSIGN '{' const_list '}'
    6                | var_decl_modifiers IDENTIFIER '[' NUMBER ']' ASSIGN '{' const_list '}'

    7 var_decl_modifiers: TYPE

    8 statement_list: statement
    9               | statement_list statement
   10               | NOPEN statement_list NCLOSE
   11               | statement_list NOPEN statement_list NCLOSE

   12 statement: error
   13          | ERROR
   14          | var_declaration SEMI
   15          | arith_expression SEMI
   16          | IF '(' bool_expression ')' block
   17          | IF '(' bool_expression ')' block ELSE block

   18 block: statement
   19      | '{' statement_list '}'

   20 func_call: DYNINST BACKTICK IDENTIFIER '(' param_list ')'
   21          | IDENTIFIER '(' param_list ')'

   22 param_list: /* empty */
   23           | arith_expression
   24           | param_list COMMA arith_expression

   25 bool_constant: TRUE
   26              | FALSE

   27 bool_expression: bool_constant
   28                | arith_expression '<' arith_expression
   29                | arith_expression '>' arith_expression
   30                | arith_expression EQ arith_expression
   31                | arith_expression LESS_EQ arith_expression
   32                | arith_expression GREATER_EQ arith_expression
   33                | arith_expression NOT_EQ arith_expression
   34                | bool_expression AND bool_expression
   35                | bool_expression OR bool_expression

   36 var_modifiers: GLOBAL
   37              | LOCAL
   38              | PARAM
   39              | THREAD
   40              | MACHINE

   41 variable_expr: IDENTIFIER
   42              | '*' IDENTIFIER
   43              | '&' IDENTIFIER
   44              | INF BACKTICK IDENTIFIER
   45              | '*' INF BACKTICK IDENTIFIER
   46              | '&' INF BACKTICK IDENTIFIER
   47              | var_modifiers BACKTICK IDENTIFIER
   48              | '*' var_modifiers BACKTICK IDENTIFIER
   49              | '&' var_modifiers BACKTICK IDENTIFIER
   50              | var_modifiers BACKTICK NUMBER
   51              | '*' var_modifiers BACKTICK NUMBER
   52              | '&' var_modifiers BACKTICK NUMBER
   53              | variable_expr '[' arith_expression ']'

   54 constant: NUMBER
   55         | STRING

   56 const_list: constant
   57           | const_list COMMA constant

   58 arith_expression: variable_expr
   59                 | constant
   60                 | NILL
   61                 | DYNINST BACKTICK IDENTIFIER
   62                 | arith_expression '*' arith_expression
   63                 | func_call
   64                 | variable_expr ASSIGN arith_expression
   65                 | variable_expr ADD_ASSIGN arith_expression
   66                 | variable_expr SUB_ASSIGN arith_expression
   67                 | variable_expr MUL_ASSIGN arith_expression
   68                 | variable_expr DIV_ASSIGN arith_expression
   69                 | variable_expr MOD_ASSIGN arith_expression
   70                 | arith_expression '/' arith_expression
   71                 | arith_expression '%' arith_expression
   72                 | arith_expression '+' arith_expression
   73                 | arith_expression '-' arith_expression
   74                 | arith_expression '|' arith_expression
   75                 | '(' arith_expression ')'
   76                 | inc_decr_expr

   77 inc_decr_expr: variable_expr INC_OP
   78              | INC_OP variable_expr
   79              | variable_expr DEC_OP
   80              | DEC_OP variable_expr


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'%' (37) 71
'&' (38) 43 46 49 52
'(' (40) 16 17 20 21 75
')' (41) 16 17 20 21 75
'*' (42) 42 45 48 51 62
'+' (43) 72
'-' (45) 73
'/' (47) 70
'<' (60) 28
'>' (62) 29
'[' (91) 4 5 6 53
']' (93) 4 5 6 53
'{' (123) 5 6 19
'|' (124) 74
'}' (125) 5 6 19
'~' (126)
error (256) 12
KNOWN_ERROR_TOK (258)
IDENTIFIER (259) 2 3 4 5 6 20 21 41 42 43 44 45 46 47 48 49 61
CONSTANT (260)
STRING (261) 55
TYPE (262) 7
NUMBER (263) 4 6 50 51 52 54
ERROR (264) 13
EOL (265)
SIZEOF (266)
TRUE (267) 25
FALSE (268) 26
PTR_OP (269)
INC_OP (270) 77 78
DEC_OP (271) 79 80
LEFT_OP (272)
RIGHT_OP (273)
LEFT_ASSIGN (274)
RIGHT_ASSIGN (275)
AND_ASSIGN (276)
XOR_ASSIGN (277)
OR_ASSIGN (278)
TYPE_NAME (279)
TYPEDEF (280)
EXTERN (281)
STATIC (282)
CHAR (283)
SHORT (284)
INT (285)
LONG (286)
SIGNED (287)
UNSIGNED (288)
FLOAT (289)
DOUBLE (290)
CONST (291)
VOID (292)
STRUCT (293)
UNION (294)
ENUM (295)
ELLIPSIS (296)
IF (297) 16 17
LOCAL (298) 37
PARAM (299) 38
THREAD (300) 39
GLOBAL (301) 36
MACHINE (302) 40
INF (303) 44 45 46
DYNINST (304) 20 61
INST (305)
NEWLINE (306)
CASE (307)
DEFAULT (308)
SWITCH (309)
RETURN (310)
NILL (311) 60
COMMA (312) 24 57
AMPERSAND (313)
ASTERISK (314)
DOT (315)
NOT (316)
OR (317) 35
AND (318) 34
NOT_EQ (319) 33
EQ (320) 30
GREATER_EQ (321) 32
LESS_EQ (322) 31
COLON (323)
SEMI (324) 14 15
END_BLOCK (325)
START_BLOCK (326)
DOLLAR (327)
BACKTICK (328) 20 44 45 46 47 48 49 50 51 52 61
ASSIGN (329) 3 5 6 64
SUB_ASSIGN (330) 66
ADD_ASSIGN (331) 65
MOD_ASSIGN (332) 69
DIV_ASSIGN (333) 68
MUL_ASSIGN (334) 67
OR_OP (335)
AND_OP (336)
NCLOSE (337) 10 11
NOPEN (338) 10 11
LOWER_THAN_ELSE (339)
ELSE (340) 17
LOWER_THAN_DEREF (341)


Nonterminals, with rules where they appear

$accept (104)
    on left: 0
start (105)
    on left: 1, on right: 0
var_declaration (106)
    on left: 2 3 4 5 6, on right: 14
var_decl_modifiers (107)
    on left: 7, on right: 2 3 4 5 6
statement_list (108)
    on left: 8 9 10 11, on right: 1 9 10 11 19
statement (109)
    on left: 12 13 14 15 16 17, on right: 8 9 18
block (110)
    on left: 18 19, on right: 16 17
func_call (111)
    on left: 20 21, on right: 63
param_list (112)
    on left: 22 23 24, on right: 20 21 24
bool_constant (113)
    on left: 25 26, on right: 27
bool_expression (114)
    on left: 27 28 29 30 31 32 33 34 35, on right: 16 17 34 35
var_modifiers (115)
    on left: 36 37 38 39 40, on right: 47 48 49 50 51 52
variable_expr (116)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53,
    on right: 53 58 64 65 66 67 68 69 77 78 79 80
constant (117)
    on left: 54 55, on right: 56 57 59
const_list (118)
    on left: 56 57, on right: 5 6 57
arith_expression (119)
    on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
    76, on right: 3 15 23 24 28 29 30 31 32 33 53 62 64 65 66 67 68
    69 70 71 72 73 74 75
inc_decr_expr (120)
    on left: 77 78 79 80, on right: 76


state 0

    0 $accept: . start $end

    error       shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    TYPE        shift, and go to state 4
    NUMBER      shift, and go to state 5
    ERROR       shift, and go to state 6
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    IF          shift, and go to state 9
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    NOPEN       shift, and go to state 20
    '('         shift, and go to state 21

    start               go to state 22
    var_declaration     go to state 23
    var_decl_modifiers  go to state 24
    statement_list      go to state 25
    statement           go to state 26
    func_call           go to state 27
    var_modifiers       go to state 28
    variable_expr       go to state 29
    constant            go to state 30
    arith_expression    go to state 31
    inc_decr_expr       go to state 32


state 1

   12 statement: error .

    $default  reduce using rule 12 (statement)


state 2

   21 func_call: IDENTIFIER . '(' param_list ')'
   41 variable_expr: IDENTIFIER .

    '('  shift, and go to state 33

    $default  reduce using rule 41 (variable_expr)


state 3

   55 constant: STRING .

    $default  reduce using rule 55 (constant)


state 4

    7 var_decl_modifiers: TYPE .

    $default  reduce using rule 7 (var_decl_modifiers)


state 5

   54 constant: NUMBER .

    $default  reduce using rule 54 (constant)


state 6

   13 statement: ERROR .

    $default  reduce using rule 13 (statement)


state 7

   78 inc_decr_expr: INC_OP . variable_expr

    IDENTIFIER  shift, and go to state 34
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19

    var_modifiers  go to state 28
    variable_expr  go to state 35


state 8

   80 inc_decr_expr: DEC_OP . variable_expr

    IDENTIFIER  shift, and go to state 34
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19

    var_modifiers  go to state 28
    variable_expr  go to state 36


state 9

   16 statement: IF . '(' bool_expression ')' block
   17          | IF . '(' bool_expression ')' block ELSE block

    '('  shift, and go to state 37


state 10

   37 var_modifiers: LOCAL .

    $default  reduce using rule 37 (var_modifiers)


state 11

   38 var_modifiers: PARAM .

    $default  reduce using rule 38 (var_modifiers)


state 12

   39 var_modifiers: THREAD .

    $default  reduce using rule 39 (var_modifiers)


state 13

   36 var_modifiers: GLOBAL .

    $default  reduce using rule 36 (var_modifiers)


state 14

   40 var_modifiers: MACHINE .

    $default  reduce using rule 40 (var_modifiers)


state 15

   44 variable_expr: INF . BACKTICK IDENTIFIER

    BACKTICK  shift, and go to state 38


state 16

   20 func_call: DYNINST . BACKTICK IDENTIFIER '(' param_list ')'
   61 arith_expression: DYNINST . BACKTICK IDENTIFIER

    BACKTICK  shift, and go to state 39


state 17

   60 arith_expression: NILL .

    $default  reduce using rule 60 (arith_expression)


state 18

   42 variable_expr: '*' . IDENTIFIER
   45              | '*' . INF BACKTICK IDENTIFIER
   48              | '*' . var_modifiers BACKTICK IDENTIFIER
   51              | '*' . var_modifiers BACKTICK NUMBER

    IDENTIFIER  shift, and go to state 40
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 41

    var_modifiers  go to state 42


state 19

   43 variable_expr: '&' . IDENTIFIER
   46              | '&' . INF BACKTICK IDENTIFIER
   49              | '&' . var_modifiers BACKTICK IDENTIFIER
   52              | '&' . var_modifiers BACKTICK NUMBER

    IDENTIFIER  shift, and go to state 43
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 44

    var_modifiers  go to state 45


state 20

   10 statement_list: NOPEN . statement_list NCLOSE

    error       shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    TYPE        shift, and go to state 4
    NUMBER      shift, and go to state 5
    ERROR       shift, and go to state 6
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    IF          shift, and go to state 9
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    NOPEN       shift, and go to state 20
    '('         shift, and go to state 21

    var_declaration     go to state 23
    var_decl_modifiers  go to state 24
    statement_list      go to state 46
    statement           go to state 26
    func_call           go to state 27
    var_modifiers       go to state 28
    variable_expr       go to state 29
    constant            go to state 30
    arith_expression    go to state 31
    inc_decr_expr       go to state 32


state 21

   75 arith_expression: '(' . arith_expression ')'

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    func_call         go to state 27
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 47
    inc_decr_expr     go to state 32


state 22

    0 $accept: start . $end

    $end  shift, and go to state 48


state 23

   14 statement: var_declaration . SEMI

    SEMI  shift, and go to state 49


state 24

    2 var_declaration: var_decl_modifiers . IDENTIFIER
    3                | var_decl_modifiers . IDENTIFIER ASSIGN arith_expression
    4                | var_decl_modifiers . IDENTIFIER '[' NUMBER ']'
    5                | var_decl_modifiers . IDENTIFIER '[' ']' ASSIGN '{' const_list '}'
    6                | var_decl_modifiers . IDENTIFIER '[' NUMBER ']' ASSIGN '{' const_list '}'

    IDENTIFIER  shift, and go to state 50


state 25

    1 start: statement_list .
    9 statement_list: statement_list . statement
   11               | statement_list . NOPEN statement_list NCLOSE

    error       shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    TYPE        shift, and go to state 4
    NUMBER      shift, and go to state 5
    ERROR       shift, and go to state 6
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    IF          shift, and go to state 9
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    NOPEN       shift, and go to state 51
    '('         shift, and go to state 21

    $end  reduce using rule 1 (start)

    var_declaration     go to state 23
    var_decl_modifiers  go to state 24
    statement           go to state 52
    func_call           go to state 27
    var_modifiers       go to state 28
    variable_expr       go to state 29
    constant            go to state 30
    arith_expression    go to state 31
    inc_decr_expr       go to state 32


state 26

    8 statement_list: statement .

    $default  reduce using rule 8 (statement_list)


state 27

   63 arith_expression: func_call .

    $default  reduce using rule 63 (arith_expression)


state 28

   47 variable_expr: var_modifiers . BACKTICK IDENTIFIER
   50              | var_modifiers . BACKTICK NUMBER

    BACKTICK  shift, and go to state 53


state 29

   53 variable_expr: variable_expr . '[' arith_expression ']'
   58 arith_expression: variable_expr .
   64                 | variable_expr . ASSIGN arith_expression
   65                 | variable_expr . ADD_ASSIGN arith_expression
   66                 | variable_expr . SUB_ASSIGN arith_expression
   67                 | variable_expr . MUL_ASSIGN arith_expression
   68                 | variable_expr . DIV_ASSIGN arith_expression
   69                 | variable_expr . MOD_ASSIGN arith_expression
   77 inc_decr_expr: variable_expr . INC_OP
   79              | variable_expr . DEC_OP

    INC_OP      shift, and go to state 54
    DEC_OP      shift, and go to state 55
    ASSIGN      shift, and go to state 56
    SUB_ASSIGN  shift, and go to state 57
    ADD_ASSIGN  shift, and go to state 58
    MOD_ASSIGN  shift, and go to state 59
    DIV_ASSIGN  shift, and go to state 60
    MUL_ASSIGN  shift, and go to state 61
    '['         shift, and go to state 62

    $default  reduce using rule 58 (arith_expression)


state 30

   59 arith_expression: constant .

    $default  reduce using rule 59 (arith_expression)


state 31

   15 statement: arith_expression . SEMI
   62 arith_expression: arith_expression . '*' arith_expression
   70                 | arith_expression . '/' arith_expression
   71                 | arith_expression . '%' arith_expression
   72                 | arith_expression . '+' arith_expression
   73                 | arith_expression . '-' arith_expression
   74                 | arith_expression . '|' arith_expression

    '+'   shift, and go to state 63
    '-'   shift, and go to state 64
    '*'   shift, and go to state 65
    '/'   shift, and go to state 66
    '%'   shift, and go to state 67
    '|'   shift, and go to state 68
    SEMI  shift, and go to state 69


state 32

   76 arith_expression: inc_decr_expr .

    $default  reduce using rule 76 (arith_expression)


state 33

   21 func_call: IDENTIFIER '(' . param_list ')'

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    $default  reduce using rule 22 (param_list)

    func_call         go to state 27
    param_list        go to state 70
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 71
    inc_decr_expr     go to state 32


state 34

   41 variable_expr: IDENTIFIER .

    $default  reduce using rule 41 (variable_expr)


state 35

   53 variable_expr: variable_expr . '[' arith_expression ']'
   78 inc_decr_expr: INC_OP variable_expr .

    '['  shift, and go to state 62

    $default  reduce using rule 78 (inc_decr_expr)


state 36

   53 variable_expr: variable_expr . '[' arith_expression ']'
   80 inc_decr_expr: DEC_OP variable_expr .

    '['  shift, and go to state 62

    $default  reduce using rule 80 (inc_decr_expr)


state 37

   16 statement: IF '(' . bool_expression ')' block
   17          | IF '(' . bool_expression ')' block ELSE block

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    TRUE        shift, and go to state 72
    FALSE       shift, and go to state 73
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    func_call         go to state 27
    bool_constant     go to state 74
    bool_expression   go to state 75
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 76
    inc_decr_expr     go to state 32


state 38

   44 variable_expr: INF BACKTICK . IDENTIFIER

    IDENTIFIER  shift, and go to state 77


state 39

   20 func_call: DYNINST BACKTICK . IDENTIFIER '(' param_list ')'
   61 arith_expression: DYNINST BACKTICK . IDENTIFIER

    IDENTIFIER  shift, and go to state 78


state 40

   42 variable_expr: '*' IDENTIFIER .

    $default  reduce using rule 42 (variable_expr)


state 41

   45 variable_expr: '*' INF . BACKTICK IDENTIFIER

    BACKTICK  shift, and go to state 79


state 42

   48 variable_expr: '*' var_modifiers . BACKTICK IDENTIFIER
   51              | '*' var_modifiers . BACKTICK NUMBER

    BACKTICK  shift, and go to state 80


state 43

   43 variable_expr: '&' IDENTIFIER .

    $default  reduce using rule 43 (variable_expr)


state 44

   46 variable_expr: '&' INF . BACKTICK IDENTIFIER

    BACKTICK  shift, and go to state 81


state 45

   49 variable_expr: '&' var_modifiers . BACKTICK IDENTIFIER
   52              | '&' var_modifiers . BACKTICK NUMBER

    BACKTICK  shift, and go to state 82


state 46

    9 statement_list: statement_list . statement
   10               | NOPEN statement_list . NCLOSE
   11               | statement_list . NOPEN statement_list NCLOSE

    error       shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    TYPE        shift, and go to state 4
    NUMBER      shift, and go to state 5
    ERROR       shift, and go to state 6
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    IF          shift, and go to state 9
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    NCLOSE      shift, and go to state 83
    NOPEN       shift, and go to state 51
    '('         shift, and go to state 21

    var_declaration     go to state 23
    var_decl_modifiers  go to state 24
    statement           go to state 52
    func_call           go to state 27
    var_modifiers       go to state 28
    variable_expr       go to state 29
    constant            go to state 30
    arith_expression    go to state 31
    inc_decr_expr       go to state 32


state 47

   62 arith_expression: arith_expression . '*' arith_expression
   70                 | arith_expression . '/' arith_expression
   71                 | arith_expression . '%' arith_expression
   72                 | arith_expression . '+' arith_expression
   73                 | arith_expression . '-' arith_expression
   74                 | arith_expression . '|' arith_expression
   75                 | '(' arith_expression . ')'

    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    '%'  shift, and go to state 67
    '|'  shift, and go to state 68
    ')'  shift, and go to state 84


state 48

    0 $accept: start $end .

    $default  accept


state 49

   14 statement: var_declaration SEMI .

    $default  reduce using rule 14 (statement)


state 50

    2 var_declaration: var_decl_modifiers IDENTIFIER .
    3                | var_decl_modifiers IDENTIFIER . ASSIGN arith_expression
    4                | var_decl_modifiers IDENTIFIER . '[' NUMBER ']'
    5                | var_decl_modifiers IDENTIFIER . '[' ']' ASSIGN '{' const_list '}'
    6                | var_decl_modifiers IDENTIFIER . '[' NUMBER ']' ASSIGN '{' const_list '}'

    ASSIGN  shift, and go to state 85
    '['     shift, and go to state 86

    $default  reduce using rule 2 (var_declaration)


state 51

   11 statement_list: statement_list NOPEN . statement_list NCLOSE

    error       shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    TYPE        shift, and go to state 4
    NUMBER      shift, and go to state 5
    ERROR       shift, and go to state 6
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    IF          shift, and go to state 9
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    NOPEN       shift, and go to state 20
    '('         shift, and go to state 21

    var_declaration     go to state 23
    var_decl_modifiers  go to state 24
    statement_list      go to state 87
    statement           go to state 26
    func_call           go to state 27
    var_modifiers       go to state 28
    variable_expr       go to state 29
    constant            go to state 30
    arith_expression    go to state 31
    inc_decr_expr       go to state 32


state 52

    9 statement_list: statement_list statement .

    $default  reduce using rule 9 (statement_list)


state 53

   47 variable_expr: var_modifiers BACKTICK . IDENTIFIER
   50              | var_modifiers BACKTICK . NUMBER

    IDENTIFIER  shift, and go to state 88
    NUMBER      shift, and go to state 89


state 54

   77 inc_decr_expr: variable_expr INC_OP .

    $default  reduce using rule 77 (inc_decr_expr)


state 55

   79 inc_decr_expr: variable_expr DEC_OP .

    $default  reduce using rule 79 (inc_decr_expr)


state 56

   64 arith_expression: variable_expr ASSIGN . arith_expression

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    func_call         go to state 27
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 90
    inc_decr_expr     go to state 32


state 57

   66 arith_expression: variable_expr SUB_ASSIGN . arith_expression

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    func_call         go to state 27
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 91
    inc_decr_expr     go to state 32


state 58

   65 arith_expression: variable_expr ADD_ASSIGN . arith_expression

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    func_call         go to state 27
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 92
    inc_decr_expr     go to state 32


state 59

   69 arith_expression: variable_expr MOD_ASSIGN . arith_expression

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    func_call         go to state 27
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 93
    inc_decr_expr     go to state 32


state 60

   68 arith_expression: variable_expr DIV_ASSIGN . arith_expression

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    func_call         go to state 27
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 94
    inc_decr_expr     go to state 32


state 61

   67 arith_expression: variable_expr MUL_ASSIGN . arith_expression

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    func_call         go to state 27
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 95
    inc_decr_expr     go to state 32


state 62

   53 variable_expr: variable_expr '[' . arith_expression ']'

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    func_call         go to state 27
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 96
    inc_decr_expr     go to state 32


state 63

   72 arith_expression: arith_expression '+' . arith_expression

    IDENTIFIER  shift, and go to state 2
    STRING      shift, and go to state 3
    NUMBER      shift, and go to state 5
    INC_OP      shift, and go to state 7
    DEC_OP      shift, and go to state 8
    LOCAL       shift, and go to state 10
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 12
    GLOBAL      shift, and go to state 13
    MACHINE     shift, and go to state 14
    INF         shift, and go to state 15
    DYNINST     shift, and go to state 16
    NILL        shift, and go to state 17
    '*'         shift, and go to state 18
    '&'         shift, and go to state 19
    '('         shift, and go to state 21

    func_call         go to state 27
    var_modifiers     go to state 28
    variable_expr     go to state 29
    constant          go to state 30
    arith_expression  go to state 97
    inc_decr_expr     go to state 32


state 64

   73 arith_expression: arith_expression '-' . arith_expression
